evaluator/sources/949165948.error
/eval-folder/949165948.cpp: In function 'int main()':
/eval-folder/949165948.cpp:6:1: error: expected ';' before '}' token
 }
 ^
